# voidfleet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml
src/: main.rs  state.rs
src/engine/: abilities.rs  achievements.rs  combat.rs  crew.rs  economy.rs  equipment.rs  events.rs  factions.rs  fleet.rs  missions.rs  mod.rs  procedural.rs  ship.rs  trade.rs  voyage.rs
src/rendering/: effects.rs  layout.rs  mod.rs  particles.rs  sprites.rs  starfield.rs
src/scenes/: battle.rs  bridge.rs  crew.rs  diplomacy.rs  gamelog.rs  help.rs  inventory.rs  loot.rs  map.rs  missions.rs  mod.rs  raid.rs  stats.rs  title.rs  trade.rs  travel.rs  upgrades.rs  voyage.rs
