[package]
name = "voidfleet"
version = "0.1.0"
edition = "2024"
description = "Space conquest idle TUI game — animated ASCII battles, fleet management, and a tiny robot companion"
license = "MIT"
repository = "https://github.com/purpleneutral/voidfleet"
readme = "README.md"
keywords = ["game", "tui", "terminal", "idle", "space"]
categories = ["games", "command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dirs-next = "2.0.0"
